--- a/Source/ChocolateyGui.Common/ChocolateyGui.Common.csproj
+++ b/Source/ChocolateyGui.Common/ChocolateyGui.Common.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Enums\ListViewMode.cs" />
     <Compile Include="Enums\PackagesChangedEventType.cs" />
     <Compile Include="Hacks.cs" />
+    <Compile Include="Models\AdvancedInstall.cs" />
     <Compile Include="Models\AppConfiguration.cs" />
     <Compile Include="Models\ChocolateyAggregatedSources.cs" />
     <Compile Include="Models\ChocolateyFeature.cs" />
